--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link type="text/css" href="style.css" rel="stylesheet">
     <title>web-sandbox</title>
   </head>
   <body>
 
     <h1>hello world</h1>
     <h2>Util</h2>
-<h3>Hello kinky </h3>
+    <h3>Hello kinky</h3>
 
   </body>
+  <footer>
+    <h3>this is a footer heading</h3>
+    <div class="footer__content-block">
+      <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+      </ul>
+    </div>
+  </footer>
+
 </html>
