added new "h4" line

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>hello world</h1>
     <h2>Util</h2>
     <h3>Hello kinky</h3>
-
+    <h4> Hot fix <h4>
   </body>
   <footer>
     <h3>this is a footer heading</h3>
